--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <header class="site-header">
     <div class="wrapper">
       <div class="site-header__logo">
-         <img src="assets/images/icons/clear-view-escapes.svg">
+         <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
       </div>
          <div class="site-header__btn-container">
             <a class="btn" href="#">Get in Touch</a>
